{
    "name": "BullTempControls",
    "maps": [
        {
            "name": "BullTempCtrlMap",
            "id": "bc34259a-e8f7-436a-978a-6d5aa7e7b59f",
            "actions": [
                {
                    "name": "BullJump",
                    "type": "Button",
                    "id": "d0bcefa1-091f-4cbe-9fae-cba7445b9dac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BullSing",
                    "type": "Button",
                    "id": "0ed883af-c915-47c1-92e2-0f654272ad2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BullCharge",
                    "type": "Button",
                    "id": "79b4b589-fe49-48d0-b44a-68341964d651",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "239d9436-f1f5-47f6-a231-793351eb3ccc",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BullJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c15fc77-5d9c-444f-8d4e-8f8906e5e9b6",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BullSing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf93f590-0266-4a95-b44c-dff8f0e47a6f",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BullCharge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}